// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "paddingBottom": 60,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 60,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomLeftRadius": 100,
          "borderBottomRightRadius": 100,
          "borderColor": "#ddd",
          "borderStyle": "solid",
          "borderTopLeftRadius": 100,
          "borderTopRightRadius": 100,
          "borderWidth": 1,
          "height": 52,
          "justifyContent": "center",
          "marginBottom": 15,
          "width": 52,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 26,
            },
            undefined,
            {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#111111",
          "fontSize": 32,
          "fontWeight": "700",
        }
      }
    >
      R$ 10.000,00
    </Text>
    <Text
      style={
        {
          "color": "#666666",
          "fontWeight": "700",
          "marginTop": 5,
        }
      }
    >
      200 pedidos
    </Text>
  </View>
  <View
    style={
      {
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "marginBottom": 15,
        }
      }
    >
      Meus cartoes:
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#ddd",
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 15,
          "paddingBottom": 0,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 0,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
          }
        }
      >
        <View
          style={
            {
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              {
                "height": 52,
                "width": 52,
              }
            }
          />
        </View>
        <View
          style={
            {
              "borderColor": "transparent",
              "borderLeftColor": "#ddd",
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginLeft": 15,
              "paddingBottom": 15,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 15,
            }
          }
        >
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 18,
                "fontWeight": "700",
                "marginBottom": 5,
              }
            }
          >
            Bruce Wayne
          </Text>
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 13,
                "fontWeight": "700",
              }
            }
          >
            **** **** **** 1234
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#ddd",
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "marginBottom": 15,
          "paddingBottom": 0,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 0,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
          }
        }
      >
        <View
          style={
            {
              "justifyContent": "center",
            }
          }
        >
          <Image
            source={1}
            style={
              {
                "height": 52,
                "width": 52,
              }
            }
          />
        </View>
        <View
          style={
            {
              "borderColor": "transparent",
              "borderLeftColor": "#ddd",
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginLeft": 15,
              "paddingBottom": 15,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 15,
            }
          }
        >
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 18,
                "fontWeight": "700",
                "marginBottom": 5,
              }
            }
          >
            Dick Grayson
          </Text>
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 13,
                "fontWeight": "700",
              }
            }
          >
            **** **** **** 1234
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`WalletWrapper 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "#ddd",
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 62,
        "justifyContent": "space-between",
        "paddingBottom": 0,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 0,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "width": 30,
        }
      }
    />
    <Text
      numberOfLines={2}
      style={
        {
          "color": "#111111",
          "fontSize": 20,
          "fontWeight": "700",
          "maxWidth": 200,
          "textAlign": "center",
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "fontFamily": "FredokaOne-Regular",
            }
          }
        >
          <Text
            style={
              {
                "color": "rgb(0,168,104)",
                "fontSize": 32,
                "fontWeight": "700",
              }
            }
          >
            Stone
          </Text>
          <Text
            style={
              {
                "color": "rgb(10,245,61)",
                "fontSize": 32,
                "fontWeight": "700",
              }
            }
          >
            Ton :)
          </Text>
        </Text>
      </View>
    </Text>
    <View
      style={
        {
          "width": 30,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "paddingBottom": 60,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 60,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderBottomLeftRadius": 100,
            "borderBottomRightRadius": 100,
            "borderColor": "#ddd",
            "borderStyle": "solid",
            "borderTopLeftRadius": 100,
            "borderTopRightRadius": 100,
            "borderWidth": 1,
            "height": 52,
            "justifyContent": "center",
            "marginBottom": 15,
            "width": 52,
          }
        }
      >
        <Text />
      </View>
      <Text
        style={
          {
            "color": "#111111",
            "fontSize": 32,
            "fontWeight": "700",
          }
        }
      >
        R$ 10.000,00
      </Text>
      <Text
        style={
          {
            "color": "#666666",
            "fontWeight": "700",
            "marginTop": 5,
          }
        }
      >
        200 pedidos
      </Text>
    </View>
    <View
      style={
        {
          "padding": 10,
        }
      }
    >
      <Text
        style={
          {
            "marginBottom": 15,
          }
        }
      >
        Meus cartoes:
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "borderColor": "#ddd",
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 15,
            "paddingBottom": 0,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              {
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={1}
              style={
                {
                  "height": 52,
                  "width": 52,
                }
              }
            />
          </View>
          <View
            style={
              {
                "borderColor": "transparent",
                "borderLeftColor": "#ddd",
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginLeft": 15,
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#666666",
                  "fontSize": 18,
                  "fontWeight": "700",
                  "marginBottom": 5,
                }
              }
            >
              Bruce Wayne
            </Text>
            <Text
              style={
                {
                  "color": "#666666",
                  "fontSize": 13,
                  "fontWeight": "700",
                }
              }
            >
              **** **** **** 1234
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "borderColor": "#ddd",
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "marginBottom": 15,
            "paddingBottom": 0,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              {
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={1}
              style={
                {
                  "height": 52,
                  "width": 52,
                }
              }
            />
          </View>
          <View
            style={
              {
                "borderColor": "transparent",
                "borderLeftColor": "#ddd",
                "borderStyle": "solid",
                "borderWidth": 1,
                "marginLeft": 15,
                "paddingBottom": 15,
                "paddingLeft": 15,
                "paddingRight": 15,
                "paddingTop": 15,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#666666",
                  "fontSize": 18,
                  "fontWeight": "700",
                  "marginBottom": 5,
                }
              }
            >
              Dick Grayson
            </Text>
            <Text
              style={
                {
                  "color": "#666666",
                  "fontSize": 13,
                  "fontWeight": "700",
                }
              }
            >
              **** **** **** 1234
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
